yolo training added

--- a/generate/config.yaml
+++ b/generate/config.yaml
@@ -1,6 +1,7 @@
 model_dir: "../assets/"
-output_dir: "out/"
-num_samples: 1
+output_dir: "/home/gebmer/repos/assembly_vision/dataset"
+num_samples: 2
+validation_split: 0.2
 backgrounds_dir: "/home/gebmer/Pictures/unlabeled2017/"
 texture_dir: "/home/gebmer/Pictures/dtd-r1.0.1/dtd/images/porous/"
 image_extensions: [".png", ".jpg", ".jpeg"]
